# admin-dj-helpers

./: pyproject.toml
django_admin_helpers/: apps.py
django_admin_helpers/actions/: apps.py
django_admin_helpers/search/: apps.py
src/admin_helpers/static/admin_helpers/js/: copy_btn.js
src/admin_helpers/templates/admin/: base_site.html
